# flask-start-template

./: .gitignore  README.md  docker-compose.yml
flask/: .flaskenv_sample  Dockerfile  app.ini  main.py  pyproject.toml  requirements.txt
flask/app/: __init__.py
flask/app/config/: config.py
nginx/: nginx.conf
